# Medieo

./: .env.example  .gitignore  README.md  celery_app.py  config.py  pyproject.toml  worker.py
api/: database.py  main.py  schemas.py  test.html
api/alembic/: env.py
api/alembic/versions/: df715057cee9_create_videos_table.py
api/models/: video.py
api/repo/: video_repo.py
api/routes/: upload_route.py  watch_route.py
client/: package.json  pnpm-lock.yaml
client/app/: globals.css  layout.tsx  page.tsx
client/app/upload/: page.tsx
client/app/watch/[upload_id]/: page.tsx
client/components/: Navbar.tsx  Upload-Progress.tsx
storage/: s3.py
tasks/: transcoding.py
