[project]
name = "medieo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "boto3>=1.43.29",
    "celery[redis]>=5.6.3",
    "fastapi[standard]>=0.136.3",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-ffmpeg>=2.0.12",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
